Split operations for get by vardok-id and vardef-id
- This simplifies the code and typing a lot
- Fix VardokIdResponse example format
- Add more exhaustive tests
